--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -133,6 +133,27 @@
 
         <activity android:name=".gestures.KeyHandler" />
 
+        <!-- Live Display Launcher -->
+        <activity-alias
+            android:name=".livedisplay.LiveDisplay"
+            android:label="@string/live_pref_title"
+            android:targetActivity="PartsActivity">
+            <intent-filter android:priority="5">
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+                <action android:name="org.cyanogenmod.cmparts.BUTTON_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_buttons" />
+            <meta-data
+                android:name="org.cyanogenmod.settings.summary.receiver"
+                android:value="org.cyanogenmod.cmparts.PartsUpdater" />
+            <meta-data
+                android:name="org.cyanogenmod.settings.summary.key"
+                android:value="button_settings" />
+        </activity-alias>
+
         <!-- Profiles settings (dashboard) -->
         <activity-alias
             android:name=".profiles.ProfilesSettings"
